--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+            <span class="subheading">Who Am I ?</span>
           </div>
         </div>
       </div>
@@ -19,9 +19,12 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+        <H2>Who Am I ?</H2>
+        <p>In life, we often wonder, "Who am I?" This question makes us think about ourselves. But what if figuring out who we are is not the most important thing? What if we don't need a clear answer to this question?</p>
+        <p>Instead of always trying to understand ourselves, we can think about the idea that who we are can change. Our identity doesn't have to be one fixed thing. It can be like a story that keeps evolving. We don't have to stick to one way of thinking about ourselves.</p>
+        <p>This way of thinking allows us to be more open-minded. We don't have to worry too much about putting ourselves in a box or giving ourselves a label. Instead of focusing on who we are, we can explore all the different things we can be.</p>
+        <p>When we accept that finding a clear answer to "Who am I?" might not be that important, we feel lighter. We don't have to carry the burden of trying to define ourselves all the time. Life becomes more about experiencing things, learning, and growing without being stuck in one identity.</p>
+        <p>So, maybe, the real wisdom is in understanding that the question "Who am I?" is not as crucial as we might think. Instead of being fixed on finding an answer, we can enjoy the adventure of not knowing and appreciate the vastness of being human. In letting go of the need to have a clear identity, we might discover a sense of freedom and authenticity we never knew existed.</p>
       </div>
     </div>
   </div>
