--- a/templates/post.html
+++ b/templates/post.html
@@ -78,11 +78,19 @@
                       {{comment.text | safe}}
                       <span class="date sub-text">Posted by {{comment.comment_author.name}} on {{post.date}}</span>
 
-                         {% if current_user.is_authenticated %}
+                        {% if current_user.is_authenticated %}
                             {% if current_user.id in [1, 2] or current_user.id == comment.comment_author.id %}
-                            <a href="{{url_for('delete_comment', comment_id=comment.id) }}">🗑️</a>
+                                <a href="{{url_for('delete_comment', comment_id=comment.id) }}">🗑️</a>
                             {% endif %}
-                         {% endif %}
+                        {% endif %}
+
+                        {% if current_user.is_authenticated %}
+                            {% if current_user.id in [1, 2] %}
+                                <a href="{{url_for('delete_user', user_id=comment.comment_author.id)}}">
+                                  <button type="button" class="btn btn-warning btn_width m-t-10 m-r-10" style="border-radius: 30px;">Delete User ❌</button>
+                                </a>
+                            {% endif %}
+                        {% endif %}
 
                     </div>
                 </li>
