--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -20,6 +20,17 @@
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
 
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="flash-messages">
+                        {% for message in messages %}
+                            <div class="alert alert-info text-center">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            {% endwith %}
 
           {% block content %}
               <!-- Your existing content here -->
